Replace deprecated method call